--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.0.0",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1"
   }
 }
